Refactor build system and add Async, CurlHelper modules
Reorganized CMake build structure to use subdirectories for modular components. Added new Async and CurlHelper libraries with supporting headers for coroutine tasks and CURL utilities. Updated symbol export files and adjusted include paths for consistency. This improves maintainability and modularity of the codebase.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,12 +57,11 @@ endif()
 
 find_package(libobs REQUIRED)
 find_package(obs-frontend-api REQUIRED)
-find_package(Qt6 COMPONENTS Widgets Core REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Widgets Core)
 
 if(VCPKG_TARGET_TRIPLET)
   list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
 
-  find_package(Backward CONFIG)
   find_package(CURL CONFIG REQUIRED)
   find_package(fmt CONFIG REQUIRED)
   find_package(ncnn CONFIG REQUIRED)
@@ -97,85 +96,35 @@ else()
   message(FATAL_ERROR "Either USE_PKGCONFIG or VCPKG_TARGET_TRIPLET must be set.")
 endif()
 
-add_library(Memory INTERFACE)
-target_include_directories(Memory INTERFACE ${CMAKE_SOURCE_DIR}/src/Memory)
+add_subdirectory(src)
 
-add_library(BridgeUtils INTERFACE)
-target_include_directories(BridgeUtils INTERFACE ${CMAKE_SOURCE_DIR}/src/BridgeUtils)
-target_link_libraries(BridgeUtils INTERFACE OBS::libobs Logger)
-target_sources(
-  BridgeUtils
-  PRIVATE
-    src/BridgeUtils/AsyncTextureReader.hpp
-    src/BridgeUtils/GsUnique.hpp
-    src/BridgeUtils/ObsLogger.hpp
-    src/BridgeUtils/ObsUnique.hpp
-)
-
-add_library(TaskQueue INTERFACE)
-target_include_directories(TaskQueue INTERFACE ${CMAKE_SOURCE_DIR}/src/TaskQueue)
-target_link_libraries(TaskQueue INTERFACE BridgeUtils)
-target_sources(TaskQueue PRIVATE src/TaskQueue/ThrottledTaskQueue.hpp)
-
-add_library(UpdateChecker INTERFACE)
-target_include_directories(UpdateChecker INTERFACE ${CMAKE_SOURCE_DIR}/src/UpdateChecker)
-target_link_libraries(UpdateChecker INTERFACE CURL::libcurl)
-target_sources(UpdateChecker PRIVATE src/UpdateChecker/UpdateChecker.hpp)
-
-add_library(SelfieSegmenter STATIC)
-target_sources(SelfieSegmenter PRIVATE src/SelfieSegmenter/ShapeConverter.cpp)
-target_include_directories(SelfieSegmenter PUBLIC ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter)
-target_link_libraries(SelfieSegmenter PUBLIC Memory ncnn::ncnn)
-
-add_library(
+add_library(${CMAKE_PROJECT_NAME} MODULE)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_PROJECT_NAME}_Core)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c)
+target_compile_options(
   ${CMAKE_PROJECT_NAME}
-  MODULE
-  src/Core/DebugWindow.cpp
-  src/Core/MainPluginContext_c.cpp
-  src/Core/MainPluginContext.cpp
-  src/Core/RenderingContext.cpp
-  src/plugin-main.c
+  PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
 )
-target_link_libraries(
+set_target_properties(
   ${CMAKE_PROJECT_NAME}
-  PUBLIC OBS::libobs OBS::obs-frontend-api Qt6::Core Qt6::Widgets BridgeUtils SelfieSegmenter UpdateChecker TaskQueue
+  PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
 )
 
-if(Backward_FOUND)
-  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Backward::Backward)
-  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_BACKWARD)
-endif()
-
-if(MSVC)
-  target_sources(${CMAKE_PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/cmake/windows/resources/export_symbols.def")
-elseif(APPLE)
+if(APPLE)
   target_link_options(
     ${CMAKE_PROJECT_NAME}
-    PRIVATE "-Wl,-exported_symbols_list,${CMAKE_SOURCE_DIR}/cmake/macos/resources/exported_symbols_list.txt"
+    PRIVATE "-Wl,-exported_symbols_list,${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_macos.txt"
   )
-  set_target_properties(
-    ${CMAKE_PROJECT_NAME}
-    PROPERTIES XCODE_ATTRIBUTE_LD_RUNPATH_SEARCH_PATHS "@loader_path/../Frameworks"
-  )
+elseif(MSVC)
+  target_sources(${CMAKE_PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_windows.def")
 else()
   target_link_options(
     ${CMAKE_PROJECT_NAME}
-    PRIVATE "-Wl,--version-script,${CMAKE_SOURCE_DIR}/cmake/linux/resources/version_script.map"
+    PRIVATE "-Wl,--version-script,${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_linux.map"
   )
 endif()
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${CMAKE_PROJECT_NAME})
-
-foreach(target ${CMAKE_PROJECT_NAME})
-  target_compile_options(
-    ${CMAKE_PROJECT_NAME}
-    PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
-  )
-  set_target_properties(
-    ${CMAKE_PROJECT_NAME}
-    PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
-  )
-endforeach()
 
 if(BUILD_TESTING)
   enable_testing()
@@ -183,7 +132,7 @@ if(BUILD_TESTING)
   add_subdirectory(vendor/googletest EXCLUDE_FROM_ALL)
 
   add_library(stb::stb INTERFACE IMPORTED)
-  target_include_directories(stb::stb INTERFACE ${CMAKE_SOURCE_DIR}/vendor/stb)
+  target_include_directories(stb::stb INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/vendor/stb)
 
   add_subdirectory(tests)
 endif()
