--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,12 @@
+add_subdirectory(Async)
 add_subdirectory(Logger)
-add_subdirectory(CurlHelper)
-add_subdirectory(UpdateChecker)
+add_subdirectory(Memory)
 
+add_subdirectory(CurlHelper)
+add_subdirectory(TaskQueue)
+add_subdirectory(UpdateChecker)
 add_subdirectory(BridgeUtils)
-add_subdirectory(LiveStreamSegmenter)
+
+add_subdirectory(SelfieSegmenter)
+
+add_subdirectory(Core)
