--- a/src/Memory/CMakeLists.txt
+++ b/src/Memory/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(Memory INTERFACE)
-target_include_directories(Memory INTERFACE ${CMAKE_SOURCE_DIR}/src/Memory)
-target_sources(Logger PRIVATE ILogger.hpp NullLogger.hpp)
+target_include_directories(Memory INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_sources(Memory PRIVATE AlignedMemoryResource.hpp MemoryBlockPool.hpp)
