--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -17,3 +17,11 @@ target_sources(
   RenderingContext.cpp
   RenderingContext.hpp
 )
+target_compile_options(
+  ${CMAKE_PROJECT_NAME}_Core
+  PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
+)
+set_target_properties(
+  ${CMAKE_PROJECT_NAME}_Core
+  PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
+)
