Refactor core to LiveBackgroundRemovalLite/Filter and update namespaces
Moved all Core module files to src/LiveBackgroundRemovalLite/Filter, renamed the static library to _Filter, and updated CMake configuration accordingly. Unified nested namespaces to use C++17 inline namespace syntax throughout the codebase. Updated copyright headers and include paths for consistency. Changed plugin entry point from C to C++.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,4 @@ add_subdirectory(BridgeUtils)
 
 add_subdirectory(SelfieSegmenter)
 
-add_subdirectory(Core)
+add_subdirectory(LiveBackgroundRemovalLite)
