--- a/src/LiveBackgroundRemovalLite/Filter/CMakeLists.txt
+++ b/src/LiveBackgroundRemovalLite/Filter/CMakeLists.txt
@@ -1,10 +1,11 @@
-add_library(${CMAKE_PROJECT_NAME}_Core STATIC)
+add_library(${CMAKE_PROJECT_NAME}_Filter STATIC)
+target_include_directories(${CMAKE_PROJECT_NAME}_Filter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(
-  ${CMAKE_PROJECT_NAME}_Core
+  ${CMAKE_PROJECT_NAME}_Filter
   PUBLIC OBS::libobs OBS::obs-frontend-api Qt6::Core Qt6::Widgets BridgeUtils SelfieSegmenter UpdateChecker TaskQueue
 )
 target_sources(
-  ${CMAKE_PROJECT_NAME}_Core
+  ${CMAKE_PROJECT_NAME}_Filter
   PRIVATE
     DebugWindow.cpp
     DebugWindow.hpp
@@ -18,10 +19,10 @@ target_sources(
     RenderingContext.hpp
 )
 target_compile_options(
-  ${CMAKE_PROJECT_NAME}_Core
+  ${CMAKE_PROJECT_NAME}_Filter
   PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
 )
 set_target_properties(
-  ${CMAKE_PROJECT_NAME}_Core
+  ${CMAKE_PROJECT_NAME}_Filter
   PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
 )
