--- a/src/LiveBackgroundRemovalLite/MainFilter/CMakeLists.txt
+++ b/src/LiveBackgroundRemovalLite/MainFilter/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(${CMAKE_PROJECT_NAME}_Filter STATIC)
 target_include_directories(${CMAKE_PROJECT_NAME}_Filter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}_Filter
-  PUBLIC OBS::libobs OBS::obs-frontend-api Qt6::Core Qt6::Widgets BridgeUtils SelfieSegmenter UpdateChecker TaskQueue
+  PUBLIC OBS::libobs OBS::obs-frontend-api Qt6::Core Qt6::Widgets BridgeUtils SelfieSegmenter UpdateChecker TaskQueue ${CMAKE_PROJECT_NAME}_Global
 )
 target_sources(
   ${CMAKE_PROJECT_NAME}_Filter
@@ -10,9 +10,10 @@ target_sources(
     DebugWindow.cpp
     DebugWindow.hpp
     MainEffect.hpp
-    MainPluginContext_c.cpp
-    MainPluginContext.cpp
-    MainPluginContext.h
+    MainFilterContext.cpp
+    MainFilterContext.hpp
+    MainFilterInfo.cpp
+    MainFilterInfo.hpp
     PluginConfig.hpp
     PluginProperty.hpp
     RenderingContext.cpp
