Refactor MainFilter as separate static library
Renamed MainFilter target to ${CMAKE_PROJECT_NAME}_MainFilter and enabled its subdirectory in the build. Updated CMake and source files to use the new MainFilter naming and linked it to the main module. Refactored MainFilterContext and RenderingContext method names for consistency, registered the filter source in MainFilterInfo, and cleaned up plugin-main.cpp to use the new module loading/unloading flow.

--- a/src/LiveBackgroundRemovalLite/MainFilter/CMakeLists.txt
+++ b/src/LiveBackgroundRemovalLite/MainFilter/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_library(${CMAKE_PROJECT_NAME}_Filter STATIC)
-target_include_directories(${CMAKE_PROJECT_NAME}_Filter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(${CMAKE_PROJECT_NAME}_MainFilter STATIC)
+target_include_directories(${CMAKE_PROJECT_NAME}_MainFilter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(
-  ${CMAKE_PROJECT_NAME}_Filter
+  ${CMAKE_PROJECT_NAME}_MainFilter
   PUBLIC OBS::libobs OBS::obs-frontend-api Qt6::Core Qt6::Widgets BridgeUtils SelfieSegmenter UpdateChecker TaskQueue ${CMAKE_PROJECT_NAME}_Global
 )
 target_sources(
-  ${CMAKE_PROJECT_NAME}_Filter
+  ${CMAKE_PROJECT_NAME}_MainFilter
   PRIVATE
     DebugWindow.cpp
     DebugWindow.hpp
@@ -20,10 +20,10 @@ target_sources(
     RenderingContext.hpp
 )
 target_compile_options(
-  ${CMAKE_PROJECT_NAME}_Filter
+  ${CMAKE_PROJECT_NAME}_MainFilter
   PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
 )
 set_target_properties(
-  ${CMAKE_PROJECT_NAME}_Filter
+  ${CMAKE_PROJECT_NAME}_MainFilter
   PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
 )
