Add libcurl initialization and cleanup to plugin
Linked CURL::libcurl in CMake and included <curl/curl.h> in the plugin. Added curl_global_init in obs_module_load and curl_global_cleanup in obs_module_unload to ensure proper initialization and cleanup of libcurl resources.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ add_subdirectory(src)
 add_library(${CMAKE_PROJECT_NAME} MODULE)
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}
-  PRIVATE OBS::libobs BridgeUtils ${CMAKE_PROJECT_NAME}_Global ${CMAKE_PROJECT_NAME}_MainFilter
+  PRIVATE CURL::libcurl OBS::libobs BridgeUtils ${CMAKE_PROJECT_NAME}_Global ${CMAKE_PROJECT_NAME}_MainFilter
 )
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.cpp)
 target_compile_options(
