Show Dialog on the first run after the successful installation. (#416)
This pull request introduces a new "StartupUI" module to the Live
Background Removal Lite plugin, providing a first-run dialog with
multi-language support and improved user onboarding. It also updates the
build system and resource handling to support these features, including
the integration of Qt translations and resources.

**New Startup UI and User Onboarding:**
- Added a new `StartupUI` module with `FirstRunDialog` and
`StartupController`, which shows a user-friendly dialog on first run to
guide new users and request reviews. The dialog is styled to match the
application's theme and supports internationalization.
[[1]](diffhunk://#diff-090fc3ff6e27e01f8fb0ce2033c4cbde11ef9bb65f89684e02138fea469cb142R1-R15)
[[2]](diffhunk://#diff-ee5666521759ece70cf841ba47403dd257a4be2fef5bea5a1696ba5baca98f12R1-R203)
[[3]](diffhunk://#diff-dbe792dd466f31dcbcbbb05cb71a3587e4f069a1fd3a3a5bdbdda6eda1ef1077R1-R45)
[[4]](diffhunk://#diff-2831fbfef0bfbde9becf51bd975f8fec4d1730b1095a8d5998044c173b76b76fR1-R67)
[[5]](diffhunk://#diff-c887ec8f5edc7d005ce217b7e723a5c9070696efff91b2d2202c23d24bc780d4R1-R41)

**Internationalization and Resource Management:**
- Integrated Qt translation system: loads translations based on the
user's locale, with a Japanese translation file (`ja_JP.ts`) and
resource file (`resources.qrc`) added for packaging translations and
images.
[[1]](diffhunk://#diff-6e4adf1055d15135c4c39a51cc727992118fec5375eec07d326957606aec383eR17-R28)
[[2]](diffhunk://#diff-6e4adf1055d15135c4c39a51cc727992118fec5375eec07d326957606aec383eR39-R95)
[[3]](diffhunk://#diff-6e4adf1055d15135c4c39a51cc727992118fec5375eec07d326957606aec383eR106)
[[4]](diffhunk://#diff-1584b52e69b5e2ec9bf10a11d51bfbfcd7c8276bf3bd08a82b4b1441f9c2c147R1-R42)
[[5]](diffhunk://#diff-100d1422233bc3f4a09ec448e25ede6bf353db35f3e806935c1228cb99d114f8R1-R6)
- Updated `.editorconfig` to ensure consistent formatting for `.qrc`
files.

**Build System E

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,17 +106,18 @@ add_subdirectory(src)
 add_library(${CMAKE_PROJECT_NAME} MODULE)
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}
-  PRIVATE CURL::libcurl OBS::libobs BridgeUtils ${CMAKE_PROJECT_NAME}_Global ${CMAKE_PROJECT_NAME}_MainFilter
+  PRIVATE
+    CURL::libcurl
+    OBS::libobs
+    BridgeUtils
+    ${CMAKE_PROJECT_NAME}_Global
+    ${CMAKE_PROJECT_NAME}_MainFilter
+    ${CMAKE_PROJECT_NAME}_StartupUI
+    Qt6::Core
 )
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.cpp)
-target_compile_options(
-  ${CMAKE_PROJECT_NAME}
-  PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
-)
-set_target_properties(
-  ${CMAKE_PROJECT_NAME}
-  PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
-)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.cpp src/resources/resources.qrc)
+set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES AUTORCC ON)
+target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE PLUGIN_VERSION="${PLUGIN_VERSION}")
 
 if(APPLE)
   target_link_options(
