Refactor global config dialog and plugin config handling
Removed GlobalConfigDialog and replaced it with PluginConfigDialog for global settings. Refactored PluginConfig to simplify loading and moved it to the Global namespace. Updated MainFilterContext and plugin-main.cpp to use the new PluginConfig structure and pass it appropriately. Adjusted CMakeLists and includes to reflect these changes.

--- a/src/LiveBackgroundRemovalLite/Global/CMakeLists.txt
+++ b/src/LiveBackgroundRemovalLite/Global/CMakeLists.txt
@@ -3,13 +3,16 @@ target_include_directories(${CMAKE_PROJECT_NAME}_Global PUBLIC ${CMAKE_CURRENT_S
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}_Global
   PUBLIC ${JTHREAD_LIBRARIES} Async Logger
-  PRIVATE Qt6::Widgets Qt6::Core CURL::libcurl CurlHelper
+  PRIVATE Qt6::Widgets Qt6::Core CURL::libcurl BridgeUtils CurlHelper
 )
 target_sources(
   ${CMAKE_PROJECT_NAME}_Global
-  PRIVATE GlobalConfigDialog.cpp GlobalConfigDialog.hpp GlobalContext.cpp GlobalContext.hpp
+  PRIVATE
+    GlobalContext.cpp
+    GlobalContext.hpp
+    PluginConfig.cpp
+    PluginConfig.hpp
+    PluginConfigDialog.cpp
+    PluginConfigDialog.hpp
 )
-set_target_properties(
-  ${CMAKE_PROJECT_NAME}_Global
-  PROPERTIES AUTOMOC ON
-)
+set_target_properties(${CMAKE_PROJECT_NAME}_Global PROPERTIES AUTOMOC ON)
