Refactor core libraries into KaitoTokyo namespaces
Moved and renamed core async, bridge, curl, logger, memory, and selfie segmenter components into KaitoTokyo subdirectories and namespaces for improved modularity and clarity. Updated CMakeLists and source includes to reflect new structure. Removed StaticTask and legacy files, and replaced BridgeUtils with ObsBridgeUtils. Added new async primitives (Channel, Join) and updated licensing headers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,7 +168,7 @@ target_link_libraries(
   PRIVATE
     CURL::libcurl
     OBS::libobs
-    BridgeUtils
+    ObsBridgeUtils
     ${CMAKE_PROJECT_NAME}_Global
     ${CMAKE_PROJECT_NAME}_MainFilter
     ${CMAKE_PROJECT_NAME}_StartupUI
