--- a/src/BridgeUtils/CMakeLists.txt
+++ b/src/BridgeUtils/CMakeLists.txt
@@ -1,4 +1,11 @@
-add_library(BridgeUtils INTERFACE)
-target_include_directories(BridgeUtils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(BridgeUtils INTERFACE OBS::libobs Logger)
-target_sources(BridgeUtils PRIVATE AsyncTextureReader.hpp GsUnique.hpp ObsLogger.hpp ObsUnique.hpp)
+add_library(ObsBridgeUtils INTERFACE)
+target_include_directories(ObsBridgeUtils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(ObsBridgeUtils INTERFACE OBS::libobs Logger)
+target_sources(
+  ObsBridgeUtils
+  PRIVATE
+    KaitoTokyo/ObsBridgeUtils/AsyncTextureReader.hpp
+    KaitoTokyo/ObsBridgeUtils/GsUnique.hpp
+    KaitoTokyo/ObsBridgeUtils/ObsLogger.hpp
+    KaitoTokyo/ObsBridgeUtils/ObsUnique.hpp
+)
