--- a/src/LiveBackgroundRemovalLite/Global/CMakeLists.txt
+++ b/src/LiveBackgroundRemovalLite/Global/CMakeLists.txt
@@ -2,8 +2,8 @@ add_library(${CMAKE_PROJECT_NAME}_Global STATIC)
 target_include_directories(${CMAKE_PROJECT_NAME}_Global PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}_Global
-  PUBLIC ${JTHREAD_LIBRARIES} Async Logger
-  PRIVATE Qt6::Widgets Qt6::Core CURL::libcurl BridgeUtils CurlHelper
+  PUBLIC ${JTHREAD_LIBRARIES} Async Logger CurlHelper
+  PRIVATE Qt6::Widgets Qt6::Core CURL::libcurl ObsBridgeUtils
 )
 target_sources(
   ${CMAKE_PROJECT_NAME}_Global
