--- a/src/Logger/CMakeLists.txt
+++ b/src/Logger/CMakeLists.txt
@@ -1,4 +1,10 @@
 add_library(Logger INTERFACE)
 target_include_directories(Logger INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(Logger INTERFACE fmt::fmt)
-target_sources(Logger PRIVATE ILogger.hpp NullLogger.hpp)
+target_sources(
+  Logger
+  PRIVATE
+    KaitoTokyo/Logger/ILogger.hpp
+    KaitoTokyo/Logger/NullLogger.hpp
+    KaitoTokyo/Logger/MultiLogger.hpp
+    KaitoTokyo/Logger/PrintLogger.hpp
+)
