--- a/src/ObsBridgeUtils/CMakeLists.txt
+++ b/src/ObsBridgeUtils/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(ObsBridgeUtils INTERFACE)
 target_include_directories(ObsBridgeUtils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(ObsBridgeUtils INTERFACE OBS::libobs Logger)
+target_link_libraries(ObsBridgeUtils INTERFACE fmt::fmt OBS::libobs Logger)
 target_sources(
   ObsBridgeUtils
   PRIVATE
