Refactor NcnnSelfieSegmenter file loading and alignment
Replaces the file reading utility with direct file stream handling in NcnnSelfieSegmenter, adds aligned memory allocation for the model binary buffer, and updates error handling for file operations. Also updates test paths to use CMAKE_CURRENT_SOURCE_DIR and switches test constants to use std::filesystem::path for improved path handling.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,7 +16,7 @@ foreach(TEST_NAME IN LISTS TEST_LIST)
   )
   target_compile_definitions(
     ${TEST_NAME}
-    PRIVATE DATA_DIR=\"${CMAKE_SOURCE_DIR}/data\" TESTS_DIR=\"${CMAKE_SOURCE_DIR}/tests\" NOMINMAX
+    PRIVATE DATA_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/../data\" TESTS_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/../tests\" NOMINMAX
   )
   gtest_discover_tests(${TEST_NAME} DISCOVERY_MODE PRE_TEST)
 endforeach()
