Embed MediaPipe model files and refactor config
MediaPipe Selfie Segmentation model files are now embedded directly in the MainFilter sources, removing their path management from PluginConfig. RenderingContext and NcnnSelfieSegmenter are updated to use the embedded model data. PluginConfig is refactored to remove model path logic and add a fallback loader.

--- a/src/LiveBackgroundRemovalLite/MainFilter/CMakeLists.txt
+++ b/src/LiveBackgroundRemovalLite/MainFilter/CMakeLists.txt
@@ -22,6 +22,8 @@ target_sources(
     MainFilterContext.hpp
     MainFilterInfo.cpp
     MainFilterInfo.hpp
+    mediapipe_selfie_segmentation_landscape_int8_ncnn_bin.c
+    mediapipe_selfie_segmentation_landscape_int8_ncnn_param.cpp
     PluginProperty.hpp
     RenderingContext.cpp
     RenderingContext.hpp
