Update CMakeLists.txt (#467)
This pull request makes a minor update to the linker options in the
`CMakeLists.txt` file to improve symbol handling on Linux and macOS
platforms.

* **Build system / linker options:**
* Added the `-Wl,-Bsymbolic` linker flag for Linux builds to ensure
better symbol resolution and reduce symbol conflicts.
* Added an empty string argument to the macOS linker options, which may
be intended for compatibility or to fix an argument parsing issue.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,7 +188,7 @@ elseif(MSVC)
 else()
   target_link_options(
     ${CMAKE_PROJECT_NAME}
-    PRIVATE "-Wl,--version-script,${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_linux.map"
+    PRIVATE "-Wl,--version-script,${CMAKE_CURRENT_SOURCE_DIR}/src/exported_symbols_linux.map" "-Wl,-Bsymbolic"
   )
 endif()
 
